--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,16 @@
   border:1px solid hotpink;
   display:flex;
   flex-direction: column;
+  text-align: center;
   min-height: 100vh;
+ 
 }
 
 main{
   border:1px solid green;
   flex-grow:1;
-  text-align: center;
-  padding: 25px;
+  margin:2em auto;
+  padding: 1rem;
 }
 
 footer {
